fix(cors): disable credentials with wildcard origins (Render Tomcat startup)
- Empty or * CORS list used allowedOriginPatterns(*) + allowCredentials(true),
  which is invalid; Spring can fail when starting Tomcat/Security filter chain
- Use allowCredentials(true) only with explicit allowOrigins (JWT in header
  does not need cookies/credentials to API)

Made-with: Cursor